Couple of grammar fixes on page 48

--- a/lie_theory_and_jacobi_diagrams.tex
+++ b/lie_theory_and_jacobi_diagrams.tex
@@ -1207,7 +1207,7 @@ An algebra over an operad is an object in \(\mathcal{C}\) whose operations obey 
 
 \begin{example}
 	\label{ex:lie-operad}
-	Recall that an operad is a special type of collection of vector space (or other object of symmetric monoidal \(\mathcal{C}\)) \(\mathcal{O}(n)\) for \(n \in \mathbb{N}\), with a \(S_{n}\) action on each \(\mathcal{O}(n)\). Such an object is called an \(S\)-module, and there is the category \(S\text{-}\mathbf{mod}\) of \(S\)-modules whose morphisms are \(S\)-module morphisms: morphisms that commute with the action of \(S_{n}\).
+	Recall that an operad is in particular a collection of vector spaces (or other objects of some symmetric monoidal category \(\mathcal{C}\)) \(\mathcal{O}(n)\) for \(n \in \mathbb{N}\), with a \(S_{n}\) action on each \(\mathcal{O}(n)\). Such an object is called an \(S\)-module, and there is the category \(S\text{-}\mathbf{mod}\) of \(S\)-modules whose morphisms are \(S\)-module morphisms: morphisms that commute with the action of \(S_{n}\).
 
 	There is also a category \(\mathbf{Oper}\) of operads. The morphisms from operads \(\mathcal{O}\) to \(\mathcal{P}\) are sequences of maps \(\mathcal{O}(n) \to \mathcal{P}(n)\), \(n \in \mathbb{N}\) that preserve the identity, preserve composition and commute with the action of \(S_{n}\).
 
