Updates from Overleaf

--- a/lie_theory_and_jacobi_diagrams.tex
+++ b/lie_theory_and_jacobi_diagrams.tex
@@ -1371,6 +1371,7 @@ The following definition generalises the definition of a metric Lie algebra (whi
 \end{definition}
 % TODO: (Zsuzsi) We checked this in my office at some point and I recall it's fine, once you untangle what the definition means. We can talk about it in LD.Co
 % Reply: Yes, I recall we checked it! But I had a hunch we agreed that Hinnich-Vaintrob had a typo. At least I haven't managed to untangle it myself.
+% Zsuzsi: If you untangle it for O=LIE, n=2, and m=(,) the Killing form, then the S_3-invariance written for the 3-cycle is the identity that ([x,y],z)=(x,[y,z]). In other words, this is fine, no typo. You could add this as an example or remark.
 
 The conditions above can alternatively and more naturally be phrased in terms of props.
 \begin{definition}
