--- a/introduction.tex
+++ b/introduction.tex
@@ -4,7 +4,7 @@
 
 
 \lettrine{\libertineInitialGlyph{V}}{assiliev} invariants are a class of knot invariant that have special properties, much like how polynomials are a special kind of function. 
-They fit within a general framework of invariants of topological objects due to Thom, Arnold and Vassiliev. The general theory defines invariants of a class of topological objectss by taking into account not only the objects themselves but also their singular versions and how they all fit within a larger topological space.
+They fit within a general framework of invariants of topological objects due to Thom, Arnold and Vassiliev. The general theory defines invariants of a class of topological objects by taking into account not only the objects themselves but also their singular versions and how they all fit within a larger topological space.
 
 The example we discuss in this thesis is that of knots. The space of immersions \({S^{1} \to \mathbb{R}^{3}}\) contains knots (which are the embeddings), but also proper immersions that have one or more intersection points in \(\mathbb{R}^{3}\) and therefore fail to be knots. The singular knots form a space of codimension one within the space of immersions; taking its complement divides the space of immersions into connected components which are exactly the knots. Similarly, inside the space of immersions with one or more intersection points lies the codimension one space of immersions with two or more intersection points, and it again divides up the space of one-singular-point immersions into connected components. This continues, dividing the infinite-dimensional space of immersions into the stratification of the space of knots. A rough schematic illustration of the stratification might look like the image below:
 \[
