--- a/vassiliev_invariants_and_chord_diagrams.tex
+++ b/vassiliev_invariants_and_chord_diagrams.tex
@@ -685,7 +685,6 @@ We have not yet given any examples of non-Vassiliev invariants.
 
 \begin{example}
 	The \textbf{Conway polynomial} \(C(k)\) is an invariant \(C:\mathcal{K} \to Z[t]\) defined by the skein relation
-    %TODO (Zsuzsi) spacing between t and C
 	\[
 		C
 		\left(
@@ -697,7 +696,7 @@ We have not yet given any examples of non-Vassiliev invariants.
 		\negcross
 		\right)
 		=
-		tC
+		t C
 		\left(
 		\uncross
 		\right)
@@ -713,7 +712,7 @@ We have not yet given any examples of non-Vassiliev invariants.
 		.
 	\]
 
-	This is not a Vassiliev invariant because its extension to singular knots is
+	The Conway polynomial itself is not a Vassiliev invariant: its extension to singular knots is
 	\[
 		\delta C
 		\left(
@@ -724,9 +723,8 @@ We have not yet given any examples of non-Vassiliev invariants.
 		\left(
 		\uncross
 		\right)
-		.
 	\]
-	Therefore
+	and for multiple double points
 	\[
 		\delta^{n} C
 		\left(
@@ -741,13 +739,10 @@ We have not yet given any examples of non-Vassiliev invariants.
 		\cdots
 		\uncross
 		\right)
+		.
 	\]
-	and evaluating this on for example the sequence of singular knots
+	Take for example, the sequence \(\{k_{i}\}_{i \in \mathbb{N}}\) of singular knots, where
 	\[
-		\{k_{i}\}_{i \in \mathbb{N}}
-		\quad
-		\text{where}
-		\quad
 		k_{i}
 		\;
 		=
@@ -755,33 +750,42 @@ We have not yet given any examples of non-Vassiliev invariants.
 		\def\svgscale{0.3}
 		\adjustbox{valign=c}{\input{graphics/twist_sequence_conway_not_vassiliev.pdf_tex}}
 		\quad
-		\text{has \(i\) double points}
+		\text{has \(i\) double points and a single crossing.}
 	\]
-	showcases that for all \(n \in \mathbb{N}\), \(\delta^{n}C \neq 0\).
-%TODO (Zsuzsi) This is a good explanation, but the way it's broken into sentences, with pictures in the middle of sentences, is tricky to parse as a reader. Also, $k_i$ has $i$ double points and how many crossings?
-
+	Then evaluating the Conway polynomials of this sequence of singular knows, we have
+	\[
+		\delta^{i} C(k_{i}) = 
+		C
+		\left(
+		\unknot
+		\right)
+		=
+		1
+		\quad
+		\text{ for all \(i \in \mathbb{N}\)}
+	\]
+	and therefore the Conway polynomial is not a Vassiliev invariant.
 
 	However fix \(\ell \in \mathbb{N}\). An argument of \cite{on-the-vassiliev-knot-invariants} shows that the coefficient \(c_{\ell}\) of \(t^{\ell}\) in \(C\) is a Vassiliev invariant. Indeed, by the iterated skein relation, \(t^{\ell + 1}\) is a factor of \(\delta^{\ell + 1} C\), so \(c_{\ell} = 0\), so the coefficient of \(t^{\ell}\) vanishes. As such, while \(C(k)\) is not a Vassiliev invariant, it is approximated by Vassiliev invariants, specifically it is a power series Vassiliev invariant which we now define.
 \end{example}
 
 \begin{definition}
 	A \textbf{power series Vassiliev invariant} is an element of the space
-	\[\bigoplus_{n = 0}^{\infty} \mathcal{V}_{n}.\]
+	\[\prod_{n = 0}^{\infty} \mathcal{V}_{n}.\]
 \end{definition}
-%TODO (Zsuzsi) Should be direct product, not direct sum? In an infinite direct sum, only finite sums are allowed.
 
-%TODO (Zsuzsi) I merged the next two paragraphs, to get rid of one-sentence paragraphs:
-The Jones polynomial and all quantum invariants \cite{knot-polynomials-and-vassilievs-invariants} are also power series Vassiliev invariants. Let us now examine an invariant which does not seem natural to consider from a topological standpoint.
+The power series Vassiliev invariants are those with a particular topological interpretation in terms of the stratification of the space of knots. The details of this perspective are rather technical, so we give only a brief idea of this interpretation: roughly speaking, they arise as linking numbers with cycles in the homology of the complement of the stratification of the space of knots truncated to a certain level. We refer the reader to \cite[Ch. 15]{introduction-to-vassiliev-invariants} for a summary.
+
+The Conway and Jones polynomials and all quantum invariants \cite{knot-polynomials-and-vassilievs-invariants} are power series Vassiliev invariants. Let us now examine an invariant which is not obviously a power series Vassiliev invariant.
 \begin{example}
 	Let \(3_{1}\) denote the right-handed trefoil knot. 
-    %TODO (Zsuzsi) You could call it the "trefoil indicator invariant"?
-    The invariant \(f_{3_{1}}\) is defined
+	The trefoil indicator invariant \(f_{3_{1}}\) is defined
 	\[
 		f_{3_{1}}(k)
 		=
 		\begin{cases}
 			1
-			& k = 3_{1} \\
+			& \text{if \(k = 3_{1}\)} \\
 			0
 			& \text{otherwise}
 		\end{cases}
@@ -801,16 +805,15 @@ The Jones polynomial and all quantum invariants \cite{knot-polynomials-and-vassi
 		\def\svgscale{0.3}
 		\adjustbox{valign=c}{\input{graphics/twist_sequence_trefoil_detector_not_vassiliev.pdf_tex}}
 	\]
-	For \(i \in \mathbb{N}\), \(\partial^{i}(k_{i})\) is a sum of \(2^{i}\) terms by resolving each double point, exactly one of which is \(3_{1}\), with a coefficient of \(1\). So \(\delta^{i}(k_{i}) = 1 \neq 0\) for all \(i \in \mathbb{N}\). Hence \(f_{3_{1}}\) is not Vassiliev.
-    %TODO (Zsuzsi) Do we know whether it is power series vassiliev?
+	For \(i \in \mathbb{N}\), \(\partial^{i}(k_{i})\) is a sum of the \(2^{i}\) terms coming from resolving each double point. Exactly one of these terms is \(3_{1}\), with a coefficient of \(1\). So \(\delta^{i}(k_{i}) = 1 \neq 0\) for all \(i \in \mathbb{N}\). Hence \(f_{3_{1}}\) is not Vassiliev.
+	% NOTE: I don't know whether this is a power series Vassiliev invariant. But I wouldn't be surprised if not.
+
+	It is unknown whether the set of Vassiliev invariants detects the right-handed trefoil knot. But if so, then this invariant is a power series Vassiliev invariant.
 \end{example}
 
-More examples of non-Vassiliev invariants are the unknotting number, crossing number, signature, genus and bridge number \cite{many-classical-knot-invariants-are-not-vassiliev-invariants, twist-sequnces-and-vassiliev-invariants}. The proofs of
-%TODO (Zsuzsi) grammar
-touch on yet another dimension of the polynomial analogy, reviewed in \cite{vassiliev-invariants-as-polynomials}. It is unknown whether these invariants are power series Vassiliev invariants. 
-%TODO (Zsuzsi) including the trefoil indicator?
-In particular some of these invariants are defined as invariants tautologically, as the minimum of some property of a knot diagram across all diagrams of a knot. Knowing whether those invariants are power series Vassiliev invariants or not would be insightful as to whether they have some topologically interesting meaning like the Conway and Jones polynomials, or are more arbitrary like \(f_{3_{1}}\).
-%TODO (Zsuzsi) If vassiliev invariants detect the trefoil that $f_(3_1)$ is a power series Vassiliev invariant... so I'm not sure I guy this sistinction. Or possibly I'm misunderstanding what you're saying here.
+More examples of non-Vassiliev invariants are the unknotting number, crossing number, signature, genus and bridge number \cite{many-classical-knot-invariants-are-not-vassiliev-invariants, twist-sequnces-and-vassiliev-invariants}. The proofs of these being non-Vassiliev touch on yet another dimension of the polynomial analogy, reviewed in \cite{vassiliev-invariants-as-polynomials}. It is unknown whether these invariants are power series Vassiliev invariants. 
+
+In particular some of these invariants are defined as invariants tautologically, as the minimum of some property of a knot diagram across all diagrams of a knot. Knowing whether those invariants are power series Vassiliev invariants or not would be insightful as to whether they have some topological interpretation in terms of the stratification of the space of knots.
 
 \section{Chord diagrams and weight systems}
 \label{chord-diagrams-and-weight-systems}
